# kcalendarcore

./: .codespellrc  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .krazy  .pre-commit-config.yaml  .reviewboardrc  CMakeLists.txt  COPYING  ConfigureChecks.cmake  KF5CalendarCoreConfig.cmake.in  KF6CalendarCoreConfig.cmake.in  README.md  kcalcore.categories  kcalendarcore.renamecategories  metainfo.yaml
autotests/: CMakeLists.txt  cal  calendarlistmodeltest.cpp  createtestcases.pl  fbrecurring.cpp  incidencestest.cpp  loadcalendar.cpp  mimedatatest.cpp  readandwrite.cpp  runsingletestcase.pl  setuptzinfo.h  testalarm.cpp  testalarm.h  testattachment.cpp  testattachment.h  testattendee.cpp  testattendee.h  testcalendarobserver.cpp  testcalendarobserver.h  testcalfilter.cpp  testcalfilter.h  testconference.cpp  testconference.h  testcreateddatecompat.cpp  testcreateddatecompat.h  testcustomproperties.cpp  testcustomproperties.h  testdateserialization.cpp  testdateserialization.h  testduration.cpp  testduration.h  testevent.cpp  testevent.h  testexception.cpp  testexception.h  testfb.cpp  testfilestorage.cpp  testfilestorage.h  testfreebusy.cpp  testfreebusy.h  (+42 more)
autotests/data/Compat/: AppleICal_1.5.ics.ical.ref  Evolution_2.8.2_timezone_test.ics.ical.ref  KOrganizer_3.1a.ics.ical.ref  MSExchange.ics.ical.ref  Mozilla_1.0.ics.ical.ref  eGroupware.ics.ical.ref
autotests/data/Compat-libical3/: AppleICal_1.5.ics.ical.ref  Evolution_2.8.2_timezone_test.ics.ical.ref  Mozilla_1.0.ics.ical.ref  eGroupware.ics.ical.ref
autotests/data/Compat-libicalV4/: AppleICal_1.5.ics.ical.ref  KOrganizer_3.1a.ics.ical.ref  MSExchange.ics.ical.ref  Todos.ics.ical.ref
autotests/data/RecurrenceRule/RFC2445/: RFC2445_RRULETest01.ics.next.ref  RFC2445_RRULETest01.ics.prev.ref  RFC2445_RRULETest02.ics.next.ref  RFC2445_RRULETest02.ics.prev.ref  RFC2445_RRULETest03.ics.next.ref  RFC2445_RRULETest03.ics.prev.ref  RFC2445_RRULETest04.ics.next.ref  RFC2445_RRULETest04.ics.prev.ref  RFC2445_RRULETest05.ics.next.ref  RFC2445_RRULETest05.ics.prev.ref  RFC2445_RRULETest07.ics.next.ref  RFC2445_RRULETest07.ics.prev.ref  RFC2445_RRULETest08.ics.next.ref  RFC2445_RRULETest08.ics.prev.ref  RFC2445_RRULETest09.ics.next.ref  RFC2445_RRULETest09.ics.prev.ref  RFC2445_RRULETest11.ics.next.ref  RFC2445_RRULETest11.ics.prev.ref  RFC2445_RRULETest12.ics.next.ref  RFC2445_RRULETest12.ics.prev.ref  RFC2445_RRULETest13.ics.next.ref  RFC2445_RRULETest13.ics.prev.ref  RFC2445_RRULETest14.ics.next.ref  RFC2445_RRULETest14.ics.prev.ref  RFC2445_RRULETest15.ics.next.ref  RFC2445_RRULETest15.ics.prev.ref  RFC2445_RRULETest16.ics.next.ref  RFC2445_RRULETest16.ics.prev.ref  RFC2445_RRULETest17.ics.next.ref  RFC2445_RRULETest17.ics.prev.ref  RFC2445_RRULETest18.ics.next.ref  RFC2445_RRULETest18.ics.prev.ref  RFC2445_RRULETest19.ics.next.ref  RFC2445_RRULETest19.ics.prev.ref  RFC2445_RRULETest20.ics.next.ref  RFC2445_RRULETest20.ics.prev.ref  RFC2445_RRULETest21.ics.next.ref  RFC2445_RRULETest21.ics.prev.ref  RFC2445_RRULETest22.ics.next.ref  RFC2445_RRULETest22.ics.prev.ref  (+35 more)
autotests/data/vCalendar/: KOrganizer_vCalTestCase08.ics  KOrganizer_vCalTestCase08.ics.vcal.ref
autotests/data/vCalendar-libicalV4/: KOrganizer_vCalTestCase01.vcs.ical.ref  KOrganizer_vCalTestCase02.vcs.ical.ref  KOrganizer_vCalTestCase03.vcs.ical.ref  KOrganizer_vCalTestCase04.vcs.ical.ref  KOrganizer_vCalTestCase05.vcs.ref  KOrganizer_vCalTestCase06.vcs.ref  KOrganizer_vCalTestCase09.vcs.ical.ref  KOrganizer_vCalTestCase10.vcs.ical.ref  KOrganizer_vCalTestCase11.vcs.ical.ref  KOrganizer_vCalTestCase12.vcs.ical.ref  KOrganizer_vCalTestCase13.vcs.ical.ref
autotests/data/xCalendar/: 2024-sotm-schedule.xcal  2024-sotm-schedule.xcal.ical.ref  legacy-3-1.xcal.ical.ref  legacy-3-2.xcal  rfc6321-b-1-2.xcal  rfc6321-b-2-2.xcal.ical.ref
autotests/data/xCalendar-libicalV4/: 2024-matrix-conference-schedule.xcal  2024-matrix-conference-schedule.xcal.ical.ref  legacy-3-1.xcal  legacy-3-1.xcal.ical.ref  legacy-3-2.xcal.ical.ref  legacy-3-5.xcal  legacy-3-5.xcal.ical.ref  legacy-3-6.xcal  legacy-3-6.xcal.ical.ref  rfc6321-b-1-2.xcal.ical.ref  rfc6321-b-2-2.xcal  rfc6321-b-2-2.xcal.ical.ref
cmake/: FindLibIcal.cmake
python/: CMakeLists.txt  bindings.h  typesystem_kcalendarcore.xml
src/: CMakeLists.txt  alarm.cpp  alarm.h  attachment.cpp  attachment.h  attendee.cpp  attendee.h  calendar.cpp  calendar.h  calendar_p.h  calendarlistmodel.cpp  calendarlistmodel.h  calendarmetadata.cpp  calendarmetadata.h  calendarplugin.h  calendarpluginloader.cpp  calendarpluginloader.h  calfilter.cpp  calfilter.h  calformat.cpp  calformat.h  calstorage.cpp  calstorage.h  compat.cpp  compat.h  compat_p.h  conference.cpp  conference.h  config-kcalcore.h.cmake  customproperties.cpp  customproperties.h  duration.cpp  duration.h  event.cpp  event.h  exceptions.cpp  exceptions.h  filestorage.cpp  filestorage.h  freebusy.cpp  (+58 more)
src/android/: CMakeLists.txt  KF6CalendarCore-android-dependencies.xml  androidcalendar.cpp  androidcalendar.h  androidcalendarplugin.cpp  androidcalendarplugin.h  androidicalconverter.cpp  jnicalendar.h  jnicalendarcontract.h  jnicalendardata.h  jnicalendarplugin.h  jnieventdata.h  kjni.h
src/qml/: CMakeLists.txt  types.h
src/versit/: port.h  vcc.c  vcc.h  vcc.y  vobject.c  vobject.h
